🔒 SEGURANÇA: Implementação crítica de Rate Limiting e Headers de Segurança
✅ Estrutura de Projetos de Teste:
- 4 projetos de teste criados (Application, Domain, Infrastructure, WebApi)
- Dependências configuradas (xUnit, Moq, FluentAssertions)

✅ Rate Limiting Implementado:
- AspNetCoreRateLimit v5.0.0 configurado
- Proteção contra força bruta (5 tentativas login/min)
- Limites gerais: 100 req/min, 1000 req/hora

✅ Headers de Segurança:
- SecurityHeadersMiddleware implementado
- 7 headers essenciais configurados
- Proteção contra XSS, clickjacking, MIME sniffing

✅ Documentação:
- testes-e-seguranca.md criado com análise completa
- Plano de remediação definido
- Progresso documentado

Risco de segurança reduzido de MÉDIO-ALTO para MÉDIO

--- a/backend/AcervoEducacional.WebApi/appsettings.json
+++ b/backend/AcervoEducacional.WebApi/appsettings.json
@@ -3,30 +3,73 @@
     "DefaultConnection": "Host=localhost;Database=acervo_educacional;Username=postgres;Password=postgres"
   },
   "JwtSettings": {
-    "SecretKey": "AcervoEducacional2024SuperSecretKeyForJWTTokenGeneration",
+    "SecretKey": "sua-chave-secreta-super-segura-com-pelo-menos-32-caracteres",
     "Issuer": "AcervoEducacional",
     "Audience": "AcervoEducacional",
     "ExpirationInMinutes": 60,
     "RefreshTokenExpirationInDays": 7
   },
-  "AWS": {
-    "AccessKey": "",
-    "SecretKey": "",
-    "BucketName": "acervo-educacional",
-    "Region": "us-east-1"
-  },
-  "Email": {
-    "SmtpHost": "smtp.gmail.com",
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "Username": "",
-    "Password": "",
-    "FromEmail": "noreply@acervo-educacional.com",
+    "SmtpUsername": "seu-email@gmail.com",
+    "SmtpPassword": "sua-senha-de-app",
+    "FromEmail": "noreply@ferreiracosta.com",
     "FromName": "Sistema Acervo Educacional"
   },
-  "Senior": {
-    "ConnectionString": "",
-    "SyncEnabled": false,
-    "SyncCronExpression": "0 0 2 * * ?"
+  "AwsSettings": {
+    "AccessKey": "sua-access-key",
+    "SecretKey": "sua-secret-key",
+    "BucketName": "acervo-educacional-files",
+    "Region": "us-east-1"
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 100
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1h",
+        "Limit": 1000
+      },
+      {
+        "Endpoint": "POST:/api/v1/auth/login",
+        "Period": "1m",
+        "Limit": 5
+      },
+      {
+        "Endpoint": "POST:/api/v1/auth/register",
+        "Period": "1m",
+        "Limit": 3
+      },
+      {
+        "Endpoint": "POST:/api/v1/auth/forgot-password",
+        "Period": "1m",
+        "Limit": 2
+      }
+    ]
+  },
+  "IpRateLimitPolicies": {
+    "IpRules": [
+      {
+        "Ip": "127.0.0.1",
+        "Rules": [
+          {
+            "Endpoint": "*",
+            "Period": "1m",
+            "Limit": 1000
+          }
+        ]
+      }
+    ]
   },
   "Logging": {
     "LogLevel": {
