--- a/backend/AcervoEducacional.WebApi/AcervoEducacional.WebApi.csproj
+++ b/backend/AcervoEducacional.WebApi/AcervoEducacional.WebApi.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.11" />
     <PackageReference Include="Hangfire" Version="1.8.17" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.20.9" />
+    <PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
