--- a/backend/AcervoEducacional.WebApi/appsettings.json
+++ b/backend/AcervoEducacional.WebApi/appsettings.json
@@ -23,6 +23,12 @@
     "BucketName": "acervo-educacional-files",
     "Region": "us-east-1"
   },
+  "Security": {
+    "EnableBolaProtection": false,
+    "EnableStrictCors": false,
+    "UseEnvironmentCredentials": false,
+    "ProductionMode": false
+  },
   "IpRateLimiting": {
     "EnableEndpointRateLimiting": true,
     "StackBlockedRequests": false,
